chore: organize docs and add central package management
- Move documentation files to docs/ folder:
  - CODE_REVIEW.md, INFINITE_LOOP_FIX.md, USAGE.md
- Remove empty/temp files:
  - AGENTS.md, CLAUDE.md, Taskfile.yml, TEMP_COMMIT_*.txt
- Add Directory.Packages.props for central package version management
- Update csproj files to use central package versions
- Add proper README.md with project overview

--- a/dotnet/src/Spade/Spade.csproj
+++ b/dotnet/src/Spade/Spade.csproj
@@ -21,6 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" />
   </ItemGroup>
 </Project>
