Add 2D/3D grid natural neighbor interpolation helpers

--- a/dotnet/samples/Spade.Samples.Interpolation/Spade.Samples.Interpolation.csproj
+++ b/dotnet/samples/Spade.Samples.Interpolation/Spade.Samples.Interpolation.csproj
@@ -8,5 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Spade\Spade.csproj" />
+    <ProjectReference Include="..\..\src\Spade.Advanced\Spade.Advanced.csproj" />
   </ItemGroup>
 </Project>
