--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,28 @@ on:
       - '.github/workflows/**'
 
 jobs:
-  build-and-test:
+  pre-commit:
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Run pre-commit
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files
+
+  build:
+    runs-on: ubuntu-latest
+    needs: pre-commit
 
     steps:
       - name: Checkout
@@ -23,14 +43,38 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Restore
-        working-directory: dotnet
-        run: dotnet restore Spade.sln
+      - name: NUKE Compile
+        run: dotnet run --project build/nuke/build -- Compile --configuration Release
 
-      - name: Build
-        working-directory: dotnet
-        run: dotnet build Spade.sln --configuration Release --no-restore
+  test:
+    runs-on: ubuntu-latest
+    needs: build
 
-      - name: Test
-        working-directory: dotnet
-        run: dotnet test Spade.sln --configuration Release --no-build --logger trx
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: NUKE Test
+        run: dotnet run --project build/nuke/build -- Test --configuration Release
+
+  pack:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    needs: test
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: NUKE Pack
+        run: dotnet run --project build/nuke/build -- Pack --configuration Release
